[gd_scene load_steps=10 format=3 uid="uid://8il4f3r82eq2"]

[ext_resource type="Theme" uid="uid://buo32rgi3lfa" path="res://Resources/main_theme.tres" id="1_q4811"]
[ext_resource type="Script" path="res://CODs/Templates/upgrade_template.gd" id="2_p0mac"]
[ext_resource type="Texture2D" uid="uid://53i282i8hktt" path="res://CODs/GasStationSushi/sushis.svg" id="3_b3fpd"]
[ext_resource type="Texture2D" uid="uid://dpeowam834s4l" path="res://Assets/Textures/plain-padlock.svg" id="4_exjow"]
[ext_resource type="StyleBox" uid="uid://b51iagk840c21" path="res://Resources/wood_panel_hovered_style_box.tres" id="4_gcjwu"]
[ext_resource type="StyleBox" uid="uid://ct5yd6r3vc2id" path="res://Resources/wood_panel_disabled_style_box.tres" id="4_sgv3v"]
[ext_resource type="StyleBox" uid="uid://bfqr6wj15ajt8" path="res://Resources/wood_panel_pressed_style_box.tres" id="5_eo0a0"]
[ext_resource type="StyleBox" uid="uid://cr3mq7lbmupfm" path="res://Resources/wood_panel_style_box.tres" id="6_li3wx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh4hx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[node name="UpgradeTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_q4811")
script = ExtResource("2_p0mac")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 394.176
grow_horizontal = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_b3fpd")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 16

[node name="Name" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Gas Station Sushi"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "This will be a brief and funny description of the upgrade."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="EffectLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "X2 Gas Station Sushi Speed"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buy" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = ExtResource("4_sgv3v")
theme_override_styles/hover = ExtResource("4_gcjwu")
theme_override_styles/pressed = ExtResource("5_eo0a0")
theme_override_styles/normal = ExtResource("6_li3wx")
text = "Buy
(Price)"

[node name="LockIcon" type="TextureRect" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_exjow")
expand_mode = 3
stretch_mode = 5

[node name="FadeWhite" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 396.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kh4hx")

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Buy" to="." method="_on_buy_pressed"]
